# Automated-.pt-to-.hef-conversion-pipeline

./: .gitignore  README.md  README_SOFTWARE_SUITE.md  config.example.env  hmct  pyproject.toml  requirements-export.txt
docs/: ARCHITECTURE.md  MODEL_ZOO_MODELS.md  PROJECT_HISTORY.md  RASPBERRY_PI.md  REFERENCES.md  TROUBLESHOOTING.md
examples/: commands.md
hailo_model_toolkit/: __init__.py  checkpoint.py  cli.py  exporters.py  zoo.py
scripts/: benchmark_hefs.sh  check_hef_status.sh  check_onnx.py  compile_direct_dfc.py  compile_zoo_model.sh  convert_yolov5_dynamic.sh  export_openclip_image_encoder.py  export_yolo_onnx.sh  install_pi_runtime.sh  prepare_calibration.py  run_classification.py
tests/: test_checkpoint.py
